fix: fixed layout and z-indexing

--- a/src/components/Home/Sidebar/Sidebar.module.scss
+++ b/src/components/Home/Sidebar/Sidebar.module.scss
@@ -5,6 +5,8 @@ $hover-color: #474747;
     position: fixed;
     text-align: center;
     height: 100dvh;
+    z-index: 1000;
+    width: 17.5%;
     background: $background-color;
     color: $font-color;
     h1 {
@@ -30,9 +32,7 @@ $hover-color: #474747;
 
     .projectList {
         overflow-y: scroll;
-
         scrollbar-width: thin;
-
     }
 
     li {
@@ -53,7 +53,9 @@ $hover-color: #474747;
         }
     }
 
-    
+    span {
+        overflow: hidden;
+    }
     svg {
         width: 2rem;
         height: 2rem;
